<resources>
    <string name="app_name">Grecangoss</string>
    <string name="Materiales">Materiales</string>
    <string name="Acerca_de">Acerca de nosostros</string>
    <string name="Contactanos">Contactanos</string>
    <string name="Vision_title">Visión</string>
    <string name="Mision_title">Misión</string>
    <string name="vision_content">\n Seguir proyectando los productos translúcidos en el mercado, diversificar y
        dar a conocer la variedad de otros productos con sus aplicaciones tanto industrial como para el hogar.</string>
    <string name="mision_content">\n Comercializar materiales de construcción enfocado en cubiertas y techados con productos de la mejor calidad, teniendo variedad y opciones
        para nuestros clientes, brindando soluciones técnicas y asesoría personalizada para uso de espacios exteriores.</string>
    <string name="Valores_title">Valores</string>
    <string name="valores_content">\n Confianza \n
                                    Responsabilidad  \n
                                    Srevicio \n
                                    Calidad \n
                                    Orientacion al cliente</string>

    <string name="quienes_somos_title">¿Quienes somos?</string>
    <string name="quienes_somos_content">Constructora Grecangoss es una compañía con más de 20 años en el mercado, dedicada a la comercialización, provisión e instalación de materiales de construcción.
Siendo pioneros en insertar los materiales de Policarbonato y Acrílico en nuestro territorio, desarrollando proyectos de alto impacto y durabilidad en obras locales.
Ofrecemos amplia gama de productos, cumpliendo las expectativas de nuestros clientes, contribuyendo a la innovación en diseños y aplicaciones arquitectónicas.
</string>


</resources>